# cc_jmp123

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  config.h.in  cpplint.py  main.cc  playback.cc  playback.h
decoder/: audio_buffer.cc  audio_buffer.h  audio_interface.h  bit_stream.cc  bit_stream.cpp  bit_stream.h  bit_stream_main_data.cc  bit_stream_main_data.h  header.cc  header.cpp  header.h  layer123.cc  layer123.h  layer_1.cc  layer_1.h  layer_2.cc  layer_2.h  layer_3.cc  layer_3.h  synthesis.cc  synthesis.h  synthesis_concurrent.cc  synthesis_concurrent.h  tables.cc  tables.h
output/: output.cc  output.h
tests/: CMakeLists.txt  test_synthesis.cpp  test_works.cpp
